# benchmarks

./: Cargo.toml
benchmarks-cli/: Cargo.toml
benchmarks-cli/src/: cli.rs  main.rs
benchmarks-cli/src/data/: cpu.rs  disk.rs  gpu.rs  host.rs  ip.rs  mem.rs  mod.rs  pci_totals.rs  swap.rs  uptime.rs  usb.rs  user.rs
benchmarks-core/: Cargo.toml
benchmarks-core/src/: lib.rs
benchmarks-gui/: Cargo.toml
benchmarks-gui/src/: background_compute.rs  information.rs  main.rs  memory.rs
benchmarks-gui/src/impls/: memory.rs
benchmarks-gui/src/impls/memory/: strategies.rs
benchmarks-memory/: Cargo.toml
benchmarks-memory/src/: lib.rs  strategies.rs  strategy_internals.rs
benchmarks-sysinfo/: Cargo.toml
benchmarks-sysinfo/src/: lib.rs
benchmarks-sysinfo/src/data/: chacha.rs  cpu.rs  disk.rs  host.rs  memory.rs  mod.rs  network.rs  pci.rs  swap.rs  sysinfo.rs  usb.rs  user.rs
benchmarks-sysinfo/src/util/: hex.rs  mod.rs  pretty_pci_device.rs  query_pcidb.rs  query_usbdb.rs
rxfetch/: Cargo.toml
rxfetch/src/: arrayvec.rs  cached_path.rs  display.rs  lib.rs  parse.rs
rxfetch/src/components/: name.rs
rxfetch/src/pci/: mod.rs
rxfetch/src/pci/unix/: flags.rs  linux_procfs.rs  linux_sysfs.rs  mod.rs
rxfetch/src/usb/: mod.rs
rxfetch/src/usb/linux/: mod.rs  sys_bus_usb.rs
src/: lib.rs  main.rs
src/impls/: memory.rs
src/impls/memory/: strategies.rs  x64_strategies.rs
