[workspace]
resolver = "3"

members = ["benchmarks-core", "benchmarks-gui", "benchmarks-memory"]
default-members = ["benchmarks-gui"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
split-debuginfo = "packed"
debug = "full"

[profile.dev]
debug = "full"
split-debuginfo = "packed"
opt-level = 1

[workspace.dependencies]
rand = { version = "0.9.2", default-features = false, features = [
  "small_rng",
  "thread_rng",
] }
seq-macro = "0.3.6"
nix = { version = "0.30.1", features = ["feature"] }
sizef = "0.2.1"
egui = "0.33.0"
