[workspace]
resolver = "3"

members = [
  "benchmarks-cli",
  "benchmarks-core",
  "benchmarks-gui",
  "benchmarks-memory",
  "benchmarks-sysinfo",
  "rxfetch"
]
default-members = ["benchmarks-gui"]

[workspace.dependencies]
rand = { version = "0.10.0", default-features = false, features = [
  "thread_rng",
] }
seq-macro = "0.3.6"
nix = { version = "0.31.2", features = ["feature", "fs", "dir"] }
sizef = "0.2.1"
egui = "0.33.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
tracing = { version = "0.1.44" }
humantime = "2.3.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
split-debuginfo = "packed"
debug = "full"

[profile.dev]
debug = "full"
split-debuginfo = "packed"
opt-level = 1

[profile.min_size]
inherits = "release"
codegen-units = 1
strip = true         # Automatically strip symbols from the binary.
opt-level = "s"      # Optimize for size.
lto = true
panic = "abort"

[profile.max_perf]
inherits = "release"
codegen-units = 1
lto = true
panic = "abort"
