[package]
name = "benchmarks-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
benchmarks-core = { version = "0.1.0", path = "../benchmarks-core" }
eframe = { version = "0.33.0", features = ["persistence", "wgpu"] }
nix.workspace = true
rand.workspace = true
seq-macro.workspace = true
sizef.workspace = true
winit = "0.30.12"
