[package]
name = "benchmarks-sysinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
bstr = "1.12.0"
libc = "0.2.177"
nix.workspace = true
pnet = "0.35.0"
rxfetch = { version = "0.1.0", path = "../rxfetch", features = ["tracing"] }
sizef = "^0.2"
timeout-readwrite = "0.4.0"
tracing = { workspace = true }
