[package]
name = "rxfetch"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = "full"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "^2.10"
libc = "^0.2"
nix = { version = "0.30.1", features = ["dir"] }
nom = "8.0.0"
thiserror = "^2.0"
tracing = { version = "^0.1", optional = true }

[features]
tracing = ["dep:tracing"]

[dev-dependencies]
criterion = "^0.7"

[[bench]]
name = "pci"
harness = false
